complex/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # name of deployment
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      # this component match the front end component of the site
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: tbola45/multi-client
          ports:
            - containerPort: 3000
