complex/k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  # create a selector that attach to appropriate deployment specified
  selector:
    component: web
  ports:
    - port: 3000 #this is the port that allows other pod to connet to multi-client
      targetPort: 3000 #the port on the multi-client pod
