complex/k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  # Apply the label created in postgres-deployment.yml
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
